# S4_programs

./: README.md
BootstrapTesting/: README.md  bootstrap_pgs.R
FinnGenRuns/: FinnR6HaploChrXS4Runs.sh  FinnR6HaploGeneralLDpredRuns.sh  FinnR6HaploGeneralS4Runs.sh  README.md
LDpredRuns/: ClusterAsthmaDosages.R  ClusterAsthmaFixedDosages.R  ClusterAsthmaFixedDosages2.R  ClusterAsthmaFixedGwide.R  ClusterAsthmaFixedGwide2.R  ClusterAsthmaFixedSumStats.R  ClusterAsthmaGwide.R  ClusterAsthmaSumStats.R  ClusterBMIDosages.R  ClusterBMIDosages2.R  ClusterBMIGwide.R  ClusterBMIGwide2.R  ClusterBMISumStats.R  ClusterBreastDosages2.R  ClusterBreastOncoDosages.R  ClusterBreastOncoGwide.R  ClusterBreastOncoGwide2.R  ClusterBreastSumStats.R  ClusterCADDosages.R  ClusterCADDosages2.R  ClusterCADGwide.R  ClusterCADGwide2.R  ClusterCADSumStats.R  ClusterColorectalDosages.R  ClusterColorectalGwide.R  ClusterColorectalSumStats.R  ClusterDiabetesDosages.R  ClusterDiabetesDosages2.R  (+64 more)
src/: CMakeLists.txt  Commands.txt  LowSignificanceCorrection.cpp  LowSignificanceCorrection.h  Mlogit.cpp  Mlogit.h  MultiPGS.cpp  MultiPGS.h  PGSregression.cpp  PGSregression.h  SNPcontributions.cpp  SNPcontributions.h  main.cpp  routines.cpp  routines.h  src.md
src/bgen/: ImputeclassDetailed.cpp  ImputeclassDetailed.h  IndexQuery.cpp  View.cpp  View.hpp  bgen.cpp  bgen.hpp  parser.hpp  zlib.hpp
src/bgen/db/: Connection.cpp  Connection.hpp  Error.cpp  SQLStatement.cpp  SQLStatement.hpp  SQLite3Connection.cpp  SQLite3Connection.hpp  SQLite3Error.hpp  SQLite3Statement.cpp  SQLite3Statement.hpp
(+19 files in other folders)
